--- a/styles/main.css
+++ b/styles/main.css
@@ -25,15 +25,23 @@ body {
 
 #sections-wrapper {
     width: 200%;
-    min-height: 100%;
+    height: 100%;
     display: flex;
+    align-items: stretch;
     background-color: black;
 }
 
 .section {
     padding: 5em 5% 2em;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    /* min-height: 100%; */
+}
+
+.section::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 #sections-switch {
