--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,6 @@
     font-family: sans-serif;
 }
 
-body {
-    background-color: red;
-}
-
 .section-intro {
     padding: 0 0 5em;
 }
@@ -23,21 +19,24 @@ body {
     overflow-x: hidden;
 }
 
-#sections-wrapper {
+body.js-enabled #sections-wrapper {
     width: 200%;
     height: 100%;
     display: flex;
     align-items: stretch;
-    background-color: black;
 }
 
 .section {
+    padding: 5em 5% 2em;
+    overflow-y: scroll;
+}
+
+body.js-enabled .section {
     padding: 5em 5% 2em;
     width: 100%;
     height: 100%;
     overflow-y: scroll;
     scrollbar-width: none;
-    /* min-height: 100%; */
 }
 
 .section::-webkit-scrollbar { 
@@ -45,6 +44,11 @@ body {
 }
 
 #sections-switch {
+    display: none;
+}
+
+body.js-enabled #sections-switch {
+    display: block  ;
     width: 2em;
     height: 2em;
     background-color: #555;
